--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/images//My//D_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dinesh N T</title>
+
+    <link rel="canonical" href="https://dineshhnt.github.io/MySync./" />
+
+    <!-- Open Graph Data -->
+    <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dineshhnt.github.io/MySync./" />
+    <meta property="og:image" content="./OG card.png" />
+    <meta property="og:description" content="MySync - the portfolio of Dinesh N T, showcasing Web, Machine Learning, Deep Learning and Python projects." />
+
   </head>
   <body>
     <div id="root"></div>
