hero image and checking

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images//My//D_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dinesh N T</title>
+    <title>Dinesh N T | AI/ML & Web Develper Portfolio</title>
 
     <link rel="canonical" href="https://dineshhnt.github.io/MySync./" />
 
