--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph Data -->
     <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dineshhnt.github.io/MySync./" />
+    <meta property="og:url" content="/OG card.png" />
     <meta property="og:image" content="./OG card.png" />
     <meta property="og:description" content="MySync - the portfolio of Dinesh N T, showcasing Web, Machine Learning, Deep Learning and Python projects." />
 
