--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./images/My/D_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dinesh N T | AI/ML & Web Develper Portfolio</title>
+    <title>Dinesh N T | AI/ML & Web Developer Portfolio</title>
 
     <link rel="canonical" href="https://dineshhnt.github.io/MySync./" />
 
-    <!-- Open Graph Data -->
+    <!-- Open Graph Meta Tags (For Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://github.com/DineshhNT/MySync." />
     <meta property="og:image" content="https://dineshhnt.github.io/MySync./OG-Card.png" />
     <meta property="og:description" content="MySync - the portfolio of Dinesh N T, showcasing Web, Machine Learning, Deep Learning and Python projects." />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MySync - Dinesh N T Portfolio | AI/ML & Web Development" />
+    <meta name="twitter:description" content="Explore AI, Machine Learning, Deep Learning, and Web Development projects by Dinesh N T." />
+    <meta name="twitter:image" content="https://dineshhnt.github.io/MySync./OG-Card.png" />
+    <meta name="twitter:site" content="@YourTwitterHandle" /> <!-- Replace with your actual Twitter handle -->
+    
+    <!-- Additional SEO Meta Tags -->
+    <meta name="author" content="Dinesh N T" />
+    <meta name="keywords" content="AI, Machine Learning, Deep Learning, Web Development, Python, Portfolio" />
+    <meta name="description" content="Dinesh N T's portfolio website showcasing AI, ML, DL, and web development projects." />
 
   </head>
   <body>
