--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://github.com/DineshhNT/MySync." />
-    <meta property="og:image" content="https://github.com/DineshhNT/MySync./blob/master/OG-Card.png" />
+    <meta property="og:image" content="https://github.com/DineshhNT/MySync./blob/9b4e54fd928b9beec8b0f4b64a095c551b79510d/OG-Card.png" />
     <meta property="og:description" content="MySync - the portfolio of Dinesh N T, showcasing Web, Machine Learning, Deep Learning and Python projects." />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MySync - Dinesh N T Portfolio | AI/ML & Web Development" />
     <meta name="twitter:description" content="Explore AI, Machine Learning, Deep Learning, and Web Development projects by Dinesh N T." />
-    <meta name="twitter:image" content="https://github.com/DineshhNT/MySync./blob/master/OG-Card.png" />
+    <meta name="twitter:image" content="https://github.com/DineshhNT/MySync./blob/9b4e54fd928b9beec8b0f4b64a095c551b79510d/OG-Card.png" />
     
     <!-- Additional SEO Meta Tags -->
     <meta name="author" content="Dinesh N T" />
