google search console

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./images/My/D_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dinesh N T | AI/ML & Web Developer Portfolio</title>
+    <title>Dinesh N T - AI/ML & Web Developer | MySync Portfolio</title>
 
-    <!-- Canonical URL -->
     <link rel="canonical" href="https://dineshhnt.github.io/MySync./" />
 
-    <!-- Open Graph Meta Tags (For Facebook, LinkedIn, etc.) -->
+    <!-- Open Graph Meta Tags-->
     <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dineshhnt.github.io/MySync./" />
@@ -23,8 +22,7 @@
     <meta name="twitter:description" content="Explore AI, Machine Learning, Deep Learning, and Web Development projects by Dinesh N T." />
     <meta name="twitter:image" content="https://github.com/DineshhNT/MySync./blob/master/OG-Card.png" />
 
-
-    <!-- Additional SEO Meta Tags -->
+    <!--- SEO Meta Tags -->
     <meta name="author" content="Dinesh N T" />
     <meta name="keywords" content="AI, Machine Learning, Deep Learning, Web Development, Python, Portfolio" />
     <meta name="description" content="Dinesh N T's portfolio website showcasing AI, ML, DL, and web development projects." />
