--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dinesh N T - AI/ML & Web Developer | MySync Portfolio</title>
 
     <link rel="canonical" href="https://dineshhnt.github.io/MySync./" />
+    <meta name="google-site-verification" content="iJCsVWECK0n0KNYK15SwKRdOkcyZ3kYquQQhP0qhClg" />
 
     <!-- Open Graph Meta Tags-->
     <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
