--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dineshhnt.github.io/MySync./" />
-    <meta property="og:image" content="https://github.com/DineshhNT/MySync./blob/master/OG-Card.png" />
+    <meta property="og:image" content="https://github.com/DineshhNT/MySync./OG-Card.png" />
     <meta property="og:description" content="MySync - the portfolio of Dinesh N T, showcasing Web, Machine Learning, Deep Learning and Python projects." />
     <meta property="og:site_name" content="MySync - Dinesh N T Portfolio" />
 
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MySync - Dinesh N T Portfolio | AI/ML & Web Development" />
     <meta name="twitter:description" content="Explore AI, Machine Learning, Deep Learning, and Web Development projects by Dinesh N T." />
-    <meta name="twitter:image" content="https://github.com/DineshhNT/MySync./blob/master/OG-Card.png" />
+    <meta name="twitter:image" content="https://github.com/DineshhNT/MySync./OG-Card.png" />
 
     <!--- SEO Meta Tags -->
     <meta name="author" content="Dinesh N T" />
