--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="iJCsVWECK0n0KNYK15SwKRdOkcyZ3kYquQQhP0qhClg" />
 
     <!-- Open Graph Meta Tags-->
-    <meta property="og:title" content="MySync - Dinesh N T Portfolio | Python, AI/ML and Web Projects" />
+    <meta property="og:title" content="Dinesh N T - MySync Portfolio | Python, AI/ML and Web Developer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dineshhnt.github.io/MySync./" />
     <meta property="og:image" content="https://github.com/DineshhNT/MySync./master/public/OG-Card.png" />
