--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dinesh N T - AI/ML & Web Developer | MySync Portfolio</title>
 
-    <link rel="canonical" href="https://dineshhnt.github.io/MySync./" />
+    <link rel="canonical" href="https://dineshhnt.github.io/MySync/" />
     <meta name="google-site-verification" content="iJCsVWECK0n0KNYK15SwKRdOkcyZ3kYquQQhP0qhClg" />
 
     <!-- Open Graph Meta Tags-->
     <meta property="og:title" content="Dinesh N T - MySync Portfolio | Python, AI/ML and Web Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dineshhnt.github.io/MySync./" />
-    <meta property="og:image" content="https://github.com/DineshhNT/MySync./master/public/OG-Card.png" />
+    <meta property="og:url" content="https://dineshhnt.github.io/MySync/" />
+    <meta property="og:image" content="https://github.com/DineshhNT/MySync/master/public/OG-Card.png" />
 
     <meta property="og:description" content="MySync - the portfolio of Dinesh N T, showcasing Web, Machine Learning, Deep Learning and Python projects." />
     <meta property="og:site_name" content="MySync - Dinesh N T Portfolio" />
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MySync - Dinesh N T Portfolio | AI/ML & Web Development" />
     <meta name="twitter:description" content="Explore AI, Machine Learning, Deep Learning, and Web Development projects by Dinesh N T." />
-    <meta name="twitter:image" content="https://github.com/DineshhNT/MySync./OG-Card.png" />
+    <meta name="twitter:image" content="https://github.com/DineshhNT/MySync/OG-Card.png" />
 
     <!--- SEO Meta Tags -->
     <meta name="author" content="Dinesh N T" />
