--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/MySync/assets/D_logo-CDDnN88g.png" />
+    <link rel="icon" href="/MySync/assets/D_logo-CDDnN88g.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dinesh N T - AI/ML & Web Developer | MySync Portfolio</title>
 
